cluster/overlays/zahariev.com/qbittorrent/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  rules:
  - host: qbittorrent.zahariev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              number: 8080
  tls:
  - hosts:
    - qbittorrent.zahariev.com
    secretName: qbittorrent-tls
